// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#@@iterator() 1`] = `"t"`;

exports[`#@@iterator() 2`] = `"e"`;

exports[`#@@iterator() 3`] = `"s"`;

exports[`#@@iterator() 4`] = `"t"`;

exports[`#@@iterator() 5`] = `1`;

exports[`#@@iterator() 6`] = `2`;

exports[`#@@iterator() 7`] = `3`;

exports[`#constructor() 1`] = `
IndexedProducer {
  "size": 4,
  "source": "test",
  "state": 0,
}
`;

exports[`#constructor() 2`] = `
IndexedProducer {
  "size": 3,
  "source": Array [
    1,
    2,
    3,
  ],
  "state": 0,
}
`;
